--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <body>
         <!-- <header> <h1>My Website</h1> </header> -->
         <div class="toolbar template">
-            
+            <div class="toolbar-item template">
+                <p>Test</p>
+            </div>
+            <div class="toolbar-item template"></div>
+            <div class="toolbar-item template"></div>
         </div>
         <div class="top-menu template">
             
