--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <body>
         <!-- <header> <h1>My Website</h1> </header> -->
         <div class="toolbar template">
-            <div class="toolbar-item template">
+            <div class="toolbar-item">
                 <p>Test</p>
             </div>
-            <div class="toolbar-item template"></div>
-            <div class="toolbar-item template"></div>
+            <div class="toolbar-item"></div>
+            <div class="toolbar-item"></div>
         </div>
         <div class="top-menu template">
             
