--- a/index.html
+++ b/index.html
@@ -6,48 +6,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>NilCircuit V2</title>
         <link rel="icon" href="./assets/image/favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="./styles/fonts.css">
-        <link rel="stylesheet" href="./styles/main.css">
-        <link rel="stylesheet" href="./styles/toolbar.css">
-        <link rel="stylesheet" href="./styles/main-area.css">
-        <link rel="stylesheet" href="./styles/top-menu.css">
+        <link rel="stylesheet" href="./styles/style.css">
+
     </head>
 
     <body>
-        <!-- <header> <h1>My Website</h1> </header> -->
-        <div class="toolbar template">
-            <button class="toolbar-item" id="ColorScheme1">
-                Color Scheme 1
-            </button>
-            <button class="toolbar-item" id="ColorScheme2">
-                Color Scheme 2
-            </button>
-            <button class="toolbar-item" id="SubpageButton">
-                Subpage
-            </button>
-            <button class="toolbar-item" id="ScamButton">
-                Scammers
-            </button>
-        </div>
-        <div class="top-menu template">
-            <h1 class="main-text">NILCIRCUIT V2</h1>
-        </div>
-        <div class="main-area template" id="mainBody">
-            <p class="consoleLike main-area-item">> <span class="consoleLike" style="color: rgb(255, 98, 98);">Welcome to NilCircuitV2!</span></p>
-            <p class="consoleLike main-area-item">> Our site is still <span class="consoleLike" style="color: rgb(255, 174, 98);">UNDER DEVELOPMENT</span>!</p>
-            <p class="consoleLike main-area-item">> <span class="consoleLike" style="color: rgb(255, 255, 98);">In the meantime, listen to C418!</span></p>
-            <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/3Gt7rOjcZQoHCfnKl5AkK7?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-            <p class="consoleLike main-area-item">> <span class="consoleLike" style="color: rgb(124, 255, 98);">Or maybe @Teptonic's playlist!</span></p>
-            <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2IKJbrNo7axGkf68Dz8qxU?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        </div>
-
-        <footer><p>&copy; 2025 NilCircuit</p></footer>
+            <div class="MAIN_CONTAINER">
+                <div class="top-menu">Top Menu</div>
+                <div class="main-area">Main Area</div>
+                <div class="toolbar">Toolbar</div>
+            </div>
     </body>
 
-    <script src="./scripts/themes.js"></script>
-    <script src="./scripts/tools.js"></script>
     <script src="./scripts/examples.js"></script>
-    <script src="./scripts/hooks.js"></script>
     <script src="./scripts/learning.js"></script>
     <script>
         // This runs after prior scripts are loaded and ran, so we can use functions defined in them.
@@ -56,27 +27,8 @@
         // doesn't get refreshed by other sites, so it can introduce script injection vulnerabilities if you use it to store user input.
 
         // Here we will quickly introduce our Logger class for... well, logging of course.
-        const mainLogger = new Logger("Main")
-
-        mainLogger.log(LOG_LEVEL.INFO, "This works just like console.log, including using other types like objects and arrays");
-
-        let exampleObject = {text: "This is an object with a .text key!"};
-        mainLogger.log(LOG_LEVEL.DEBUG, exampleObject.text);
 
         _main_globals.functions.hello(); // This calls the hello function defined in examples.js that prints "Hello, World!" to the console.
-
-        let myVector2 = Vector2.fromArray([1, 5]);
-        console.debug(myVector2);
-
-        const subpageButton = document.getElementById("SubpageButton");
-        subpageButton.addEventListener("click", (ev)=>{
-            window.location.href = "./subpages/subpage.html";
-        });
-
-        const scamButton = document.getElementById("ScamButton");
-        scamButton.addEventListener("click", (ev)=>{
-            window.location.href = "./subpages/scammers.html";
-        });
     </script>
 
 </html>
