--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>NILCIRCUIT V2</title>
         <link rel="icon" href="./assets/image/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="./styles/fonts.css">
+        <link rel="stylesheet" href="./styles/testing-things.css">
         <link rel="stylesheet" href="./styles/theme.css">
         <link rel="stylesheet" href="./styles/style.css">
         <link rel="stylesheet" href="./styles/toolbar.css">
